--- a/girlCrush2/YOLOtour/src/main/resources/application.properties
+++ b/girlCrush2/YOLOtour/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 logging.config=classpath:logback-spring.xml
+
+
+
+
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=50MB
